Harden timeout processing